[project]
name = "proxytools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.5",
    "fastapi>=0.115.0",
    "fastmcp>=3.3.1",
    "jinja2>=3.1.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "openrouter>=0.9.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.32.0",
]
